# pip-fantasy-console

./: .gitignore  CMakeLists.txt  arcadia_scripting_notes.txt  build.bat  mesa_script_notes.txt  notes.txt  optimization.md  readme.md  run.bat  source.sublime-project  todo.md  todo.txt
code/: ArcadiaFantasyConsole.cpp  ByteBuffer.h  CodeEditor.cpp  CodeEditor.h  Console.cpp  Console.h  ConsoleBackendNoclip.h  Editor.cpp  Editor.h  EditorCodeEditor.cpp  EditorCodeEditor.h  EditorGUI.cpp  EditorGUI.h  EditorState.cpp  EditorState.h  Editor_CodeEditor.cpp  Editor_EntityDesigner.hpp  Editor_WorldEditor.hpp  FileSystem.cpp  FileSystem.h  GUI.CPP  GUI.H  GUI_DRAWING.CPP  GUI_DRAWING.H  Game.cpp  Game.h  GameData.cpp  GameData.h  GfxDataTypesAndUtility.cpp  GfxDataTypesAndUtility.h  GfxRenderer.cpp  GfxRenderer.h  GfxShader.cpp  GfxShader.h  Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  MesaCommon.h  MesaFantasyConsole.cpp  (+25 more)
code/core/: ArcadiaIMGUI.cpp  ArcadiaIMGUI.h  ArcadiaOpenGL.h  ArcadiaTimer.cpp  ArcadiaUtility.cpp  ArcadiaUtility.h  Console.cpp  Console.h  ConsoleBackendNoclip.h  CoreCommon.h  CoreFileSystem.cpp  CoreFileSystem.h  CoreInput.cpp  CoreInput.h  CoreMemoryAllocator.cpp  CoreMemoryAllocator.h  CorePrintLog.cpp  CoreRenderer.cpp  CoreRenderer.h  CoreShader.cpp  CoreShader.h  EditorCodeEditor.cpp  EditorGUI.cpp  EditorGUI.h  EditorState.h  FileSystem.cpp  GfxDataTypesAndUtility.cpp  GfxDataTypesAndUtility.h  GfxRenderer.cpp  GfxRenderer.h  GfxShader.cpp  GfxShader.h  InputSystem.cpp  MemoryAllocator.cpp  MemoryAllocator.h  MesaCommon.h  MesaIMGUI.cpp  MesaIMGUI.h  MesaOpenGL.h  MesaUtility.cpp  (+9 more)
code/editor/: CodeEditor.cpp  CodeEditor.h  Editor.cpp  Editor.h  Editor_WorldEditor.hpp  SpriteEditor.cpp  SpriteEditor.h  SpriteEditorActions.cpp  SpriteEditorActions.h
code/game/: ArcadiaScriptInterpreter.cpp  AssetManager.cpp  AssetManager.h  EditorGUI.cpp  EditorGUI.h  EditorState.h  Game.cpp  Game.h  Space.cpp  Space.h
code/game/script/: ASTNodes.cpp  ArcadiaScriptInterpreter.cpp  ArcadiaScriptInterpreter.h  MesaScript.cpp  MesaScript.h  MesaScript_ASTNodes.cpp  MesaScript_Interpreter.cpp  MesaScript_Lexer.cpp  MesaScript_Main.cpp  MesaScript_Main.h  MesaScript_Parser.cpp
code/manual/: CodingMain.md  Homepage.md
code/piplang/: Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Debug.cpp  Debug.h  Object.cpp  Object.h  PipLangCommon.h  Scanner.cpp  Scanner.h  VM.cpp  VM.h
code/singleheaders/: stb_textedit.h  vertext.h
code/trash/: Editor_EntityDesigner.hpp  MesaScript.h  Space.h
ext/: cmake_project_path.h  cmake_project_path.h.in
wd/: fib.ms  fib.pl  fibfib  fncall.pl  hotline  hotline.game  mapaccess  mario.game  pong  pong.game  pong.pl  strtest  template  test  wtf
wd/benchmarks/: 2023-12-25-00-52-15.txt  2023-12-25-14-59-15.txt  2023-12-25-16-23-45.txt  2023-12-25-16-23-55.txt  2023-12-25-16-24-06.txt  fib.pl  zoo.pl
wd/data/: Kevin6x9.png~
wd/tests/: firsttest.pl  printi.pl  sometests
